# SocketLib

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  databuffer.cpp  databuffer.h  socket.cpp  socket.h  unixdatagramsocket.cpp  unixdatagramsocket.h  unixserverstreamsocket.cpp  unixserverstreamsocket.h  unixsocket.cpp  unixsocket.h  unixstreamsocket.cpp  unixstreamsocket.h
.cmake/api/v1/reply/: cache-v2-42a52b905c95f5854f61.json  cmakeFiles-v1-f7a0ebc7fd81a0c8de70.json  codemodel-v2-832479435c68e938ff25.json  index-2020-12-14T07-37-45-0026.json  target-LibTests-Debug-141977118dc7c4bade49.json
Inet/: inetdatagramsocet.cpp  inetdatagramsocet.h  socket.cpp  socket.h  socketinet.cpp  socketinet.h
Tests/: CMakeLists.txt  main.cpp  tst_data_buffer.cpp  tst_inetsock.cpp  tst_libtests.h  tst_unixsock.h
Unix/: socket.cpp  socket.h  unixdatagramsocket.cpp  unixdatagramsocket.h  unixserverstreamsocket.h  unixstreamsocket.cpp  unixstreamsocket.h
build-Tests-Desktop_Qt_5_15_1_GCC_64bit-Debug/: LibTests  build.ninja
build-Tests-Desktop_Qt_5_15_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-a0e12763566ea207fff3.json  cmakeFiles-v1-6de389134031cda87c91.json  codemodel-v2-cd50211a44c6ed340744.json  index-2020-12-18T09-23-56-0213.json  target-LibTests-Debug-54083ecae415651e76e6.json
